refactor: 에러 로그 클래스 toString 재정의